--- a/bizopt/BO/templates/documentsTemplates/template5.html
+++ b/bizopt/BO/templates/documentsTemplates/template5.html
@@ -7,16 +7,16 @@
     <br>
     <hr>
     <br>
-   <div>
+    <div>
 
         <h3>
             Политика конфиденциальности
         </h3>
 
         <p>
-            Настоящая Политика конфиденциальности (далее - Политика) составлена в соответствии с 
-            требованиями Федерального закона от 27.07.2006 №152-ФЗ «О персональных данных» и 
-            определяет меры по обеспечению безопасности Персональных данных и порядок обработки 
+            Настоящая Политика конфиденциальности (далее - Политика) составлена в соответствии с
+            требованиями Федерального закона от 27.07.2006 №152-ФЗ «О персональных данных» и
+            определяет меры по обеспечению безопасности Персональных данных и порядок обработки
             Персональных данных ИП Юхтмахер Анастасии Кирилловны (далее – Оператор)
         </p>
 
@@ -25,28 +25,44 @@
         </h3>
 
         <p>
-            1.1 Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных, обеспечивающих их доступность в сети Интернет по сетевому адресу http://vitrinabrands.com. <br>
-            1.2 Обезличивание персональных данных – действия, в результате которых невозможно определить без использования дополнительной информации принадлежность Персональных данных конкретному Пользователю или иному субъекту персональных данных. <br>
-            1.3. Обработка персональных данных – любое действие (операция) или совокупность действий (операций), совершаемых с 
-            использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, 
-            систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных. <br>
-            1.4. Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или определяемому Пользователю. <br>
+            1.1 Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных,
+            обеспечивающих их доступность в сети Интернет по сетевому адресу http://vitrinabrands.com. <br>
+            1.2 Обезличивание персональных данных – действия, в результате которых невозможно определить без
+            использования дополнительной информации принадлежность Персональных данных конкретному Пользователю или
+            иному субъекту персональных данных. <br>
+            1.3. Обработка персональных данных – любое действие (операция) или совокупность действий (операций),
+            совершаемых с
+            использованием средств автоматизации или без использования таких средств с персональными данными, включая
+            сбор, запись,
+            систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу
+            (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных
+            данных. <br>
+            1.4. Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или
+            определяемому Пользователю. <br>
             1.5 Пользователь – любой клиент, который пользуется услугами Оператора. <br>
-            1.6 Предоставление персональных данных – действия, направленные на раскрытие Персональных данных определенному лицу или определенному кругу лиц. <br>
+            1.6 Предоставление персональных данных – действия, направленные на раскрытие Персональных данных
+            определенному лицу или определенному кругу лиц. <br>
         </p>
 
         <h3>
-            2.  Общие положения
+            2. Общие положения
         </h3>
 
         <p>
-            2.1 Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина 
-            при обработке его Персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну. <br>
-            2.2 Оператор обрабатывает персональные данные Пользователя в случае их заполнения и/или отправки Пользователем самостоятельно 
-            через специальные формы, расположенные на Веб-сайте, либо в процессе исполнения положений договоров с Пользователем. 
-            Заполняя соответствующие формы и/или отправляя свои персональные данные Оператору, Пользователь выражает свое согласие с данной Политикой (далее - Согласие). <br>
-            2.3 В целях исполнения обязанностей Оператора по оказанию Пользователю организационно-консультационных услуг, в том числе услуг 
-            по предоставлению информации о товарах, реализуемых на Веб-сайте, Пользователь выражает согласие на получение рассылок информационного 
+            2.1 Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и
+            свобод человека и гражданина
+            при обработке его Персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и
+            семейную тайну. <br>
+            2.2 Оператор обрабатывает персональные данные Пользователя в случае их заполнения и/или отправки
+            Пользователем самостоятельно
+            через специальные формы, расположенные на Веб-сайте, либо в процессе исполнения положений договоров с
+            Пользователем.
+            Заполняя соответствующие формы и/или отправляя свои персональные данные Оператору, Пользователь выражает
+            свое согласие с данной Политикой (далее - Согласие). <br>
+            2.3 В целях исполнения обязанностей Оператора по оказанию Пользователю организационно-консультационных
+            услуг, в том числе услуг
+            по предоставлению информации о товарах, реализуемых на Веб-сайте, Пользователь выражает согласие на
+            получение рассылок информационного
             характера, уведомляющих Пользователя о деятельности Оператора и потенциально интересных ему товарах. <br>
         </p>
 
@@ -55,11 +71,16 @@
         </h3>
 
         <p>
-            3.1. Цель обработки Персональных данных Пользователя — заключение и исполнение договоров между Пользователем и Оператором в соответствии с п.5 ч.1 ст.6 Федерального закона № 152 «О персональных данных». <br>
-            3.2 Предоставляя Пользователям возможность использования Сайта, Оператор, действуя разумно и добросовестно, считает, что Пользователь обладает 
-            всеми необходимыми правами, позволяющими ему передавать Персональные данные, акцептовать согласие на обработку Персональных данных. <br>
-            3.3. Оператор не проверяет достоверность получаемой (собираемой) информации о Пользователях, за исключением случаев, когда такая проверка 
-            необходима в целях исполнения положений действующего применимого законодательства и/или обязательств перед Пользователем. <br>
+            3.1. Цель обработки Персональных данных Пользователя — заключение и исполнение договоров между Пользователем
+            и Оператором в соответствии с п.5 ч.1 ст.6 Федерального закона № 152 «О персональных данных». <br>
+            3.2 Предоставляя Пользователям возможность использования Сайта, Оператор, действуя разумно и добросовестно,
+            считает, что Пользователь обладает
+            всеми необходимыми правами, позволяющими ему передавать Персональные данные, акцептовать согласие на
+            обработку Персональных данных. <br>
+            3.3. Оператор не проверяет достоверность получаемой (собираемой) информации о Пользователях, за исключением
+            случаев, когда такая проверка
+            необходима в целях исполнения положений действующего применимого законодательства и/или обязательств перед
+            Пользователем. <br>
             3.4 Оператор собирает и хранит только те Персональные данные, которые необходимы для: <br>
             - исполнения положений Договоров с Пользователем; <br>
             - осуществления рассылки материалов информационного характера.
@@ -75,7 +96,9 @@
             4.1.2 Номера телефонов Пользователя; <br>
             4.1.3 Адреса электронной почты (e-mail) Пользователя. <br>
             4.2. Иная информация, обрабатываемая Оператором: <br>
-            - данные о технических средствах (устройствах): IP-адрес хоста, вид операционной системы, тип браузера, географическое положение, поставщик услуг интернета, данные, полученные в результате доступа к камере, микрофону и т. п. устройств; <br>
+            - данные о технических средствах (устройствах): IP-адрес хоста, вид операционной системы, тип браузера,
+            географическое положение, поставщик услуг интернета, данные, полученные в результате доступа к камере,
+            микрофону и т. п. устройств; <br>
             - сведения о посещенных страницах Сайта; <br>
             - информация, автоматически получаемая при доступе к Сайту с использованием закладок (cookies). <br>
         </p>
@@ -85,14 +108,24 @@
         </h3>
 
         <p>
-            5.1 При обработке Персональных данных Оператор принимает необходимые правовые, организационные и технические меры для защиты Персональных данных от неправомерного или случайного доступа к ним, уничтожения, изменения, блокирования, копирования, предоставления, распространения Персональных данных, а также от иных неправомерных действий в отношении Персональных данных. Оператор принимает следующие меры: <br>
-            - обеспечивает сохранность Персональных данных и принимает все возможные меры, исключающие доступ к персональным данным неуполномоченных лиц; <br>
-            - определяет угрозы безопасности Персональных данных при их обработке в информационных системах Персональных данных; <br>
-            - оценивает эффективности принимаемых мер по обеспечению безопасности Персональных данных до ввода в эксплуатацию информационной системы Персональных данных; <br>
+            5.1 При обработке Персональных данных Оператор принимает необходимые правовые, организационные и технические
+            меры для защиты Персональных данных от неправомерного или случайного доступа к ним, уничтожения, изменения,
+            блокирования, копирования, предоставления, распространения Персональных данных, а также от иных
+            неправомерных действий в отношении Персональных данных. Оператор принимает следующие меры: <br>
+            - обеспечивает сохранность Персональных данных и принимает все возможные меры, исключающие доступ к
+            персональным данным неуполномоченных лиц; <br>
+            - определяет угрозы безопасности Персональных данных при их обработке в информационных системах Персональных
+            данных; <br>
+            - оценивает эффективности принимаемых мер по обеспечению безопасности Персональных данных до ввода в
+            эксплуатацию информационной системы Персональных данных; <br>
             - ведет учет машинных носителей Персональных данных; <br>
             - обнаруживает факты несанкционированного доступа к персональным данным и принимает меры. <br>
-            5.2 Оператор имеет право передавать Персональные данные Пользователя без согласия Пользователя следующим лицам: <br>
-            - Государственным органам, в том числе правоохранительным органам, центральным или местным исполнительным органам власти, другим официальным, государственным или судебным органам, в отношении которых Оператор обязан предоставлять информацию в соответствии с применимым законодательством по соответствующему запросу; <br>
+            5.2 Оператор имеет право передавать Персональные данные Пользователя без согласия Пользователя следующим
+            лицам: <br>
+            - Государственным органам, в том числе правоохранительным органам, центральным или местным исполнительным
+            органам власти, другим официальным, государственным или судебным органам, в отношении которых Оператор
+            обязан предоставлять информацию в соответствии с применимым законодательством по соответствующему запросу;
+            <br>
             - Поставщикам услуг Оператора с целью выполнения договорных обязательств перед Пользователем. <br>
             - Сотрудникам Оператора для выполнения Оператором обязанностей перед Пользователем. <br>
         </p>
@@ -102,16 +135,23 @@
         </h3>
 
         <p>
-            6.1 При получении Оператором запроса/отзыва согласия на обработку Персональных данных, Оператор отвечает на запрос/прекращает обработку, за исключением случаев, когда продолжение обработки прямо разрешено Законодательством. <br>
-            6.2 В связи с вышеуказанным Пользователь вправе направлять Оператору запрос/отзыв согласия на обработку его Персональных данных, предусмотренных в разделе 4, в письменной форме по адресу: 123022, г. Москва, Столярный пер., д. 3, корп. 34, кв. 72 или в форме электронного документа, 
-            подписанного квалифицированной электронной подписью в соответствии с законодательством Российской Федерации, по адресу электронной почты: info@vitrinabrands.com. <br>
+            6.1 При получении Оператором запроса/отзыва согласия на обработку Персональных данных, Оператор отвечает на
+            запрос/прекращает обработку, за исключением случаев, когда продолжение обработки прямо разрешено
+            Законодательством. <br>
+            6.2 В связи с вышеуказанным Пользователь вправе направлять Оператору запрос/отзыв согласия на обработку его
+            Персональных данных, предусмотренных в разделе 4, в письменной форме по адресу: 123022, г. Москва, Столярный
+            пер., д. 3, корп. 34, кв. 72 или в форме электронного документа,
+            подписанного квалифицированной электронной подписью в соответствии с законодательством Российской Федерации,
+            по адресу электронной почты: info@vitrinabrands.com. <br>
             6.3 Запрос/отзыв, направляемый пользователем, должен содержать следующую информацию: <br>
             - номер основного документа, удостоверяющего личность Пользователя или его представителя; <br>
             - сведения о дате выдачи указанного документа и выдавшем его органе; <br>
             - сведения, подтверждающие участие Пользователя в отношениях с оператором; <br>
             - подпись Пользователя или его представителя. <br>
-            6.4. Оператор обязуется рассмотреть и направить ответ на поступивший запрос Пользователя в течение 30 календарных дней с момента поступления обращения. <br>
-            6.5 Пользователь может отказаться от рассылки информационного характера направив отказ по адресу электронной почты: info@vitrinabrands.com. <br>
+            6.4. Оператор обязуется рассмотреть и направить ответ на поступивший запрос Пользователя в течение 30
+            календарных дней с момента поступления обращения. <br>
+            6.5 Пользователь может отказаться от рассылки информационного характера направив отказ по адресу электронной
+            почты: info@vitrinabrands.com. <br>
         </p>
 
         <h3>
@@ -119,14 +159,26 @@
         </h3>
 
         <p>
-            7.1 К настоящей Политике и отношениям между Пользователем и Оператором, возникающим в связи с применением Политики, подлежит применению право Российской Федерации. <br>
-            7.2 Все возможные споры подлежат разрешению в соответствии с Законодательством по месту регистрации Оператора. Перед обращением в суд Пользователь должен соблюсти обязательный досудебный порядок и направить Оператору соответствующую претензию в письменном виде. Срок ответа на претензию составляет 30 (тридцать) рабочих дней. <br>
-            7.3 Оператор оставляет за собой право вносить изменения в Политику. Пользователь обязан при каждом новом использовании Сайта ознакомиться с текстом Политики. <br>
-            7.4 Новая редакция Политики вступает в силу с момента ее размещения в соответствующем разделе Сайта. Любые изменения в Политике с момента вступления в силу равно распространяются на всех Пользователей, в том числе присоединившихся к Регламенту ранее даты вступления в силу изменений. В случае если Пользователь не согласен с внесенными изменениями и дополнениями он имеет право направить Оператору отзыв Согласия в порядке, предусмотренном в разделе 6 Политики. Отсутствие указанных в настоящем пункте действий Пользователя расценивается как акцепт новой редакции и иных изменений Политики в соответствии с п. 2 ст. 438 Гражданского кодекса Российской Федерации. <br>
-            7.5 Пользователь обязуется самостоятельно следить за изменениями Политики конфиденциальности путем ознакомления с актуальной редакцией. <br>
+            7.1 К настоящей Политике и отношениям между Пользователем и Оператором, возникающим в связи с применением
+            Политики, подлежит применению право Российской Федерации. <br>
+            7.2 Все возможные споры подлежат разрешению в соответствии с Законодательством по месту регистрации
+            Оператора. Перед обращением в суд Пользователь должен соблюсти обязательный досудебный порядок и направить
+            Оператору соответствующую претензию в письменном виде. Срок ответа на претензию составляет 30 (тридцать)
+            рабочих дней. <br>
+            7.3 Оператор оставляет за собой право вносить изменения в Политику. Пользователь обязан при каждом новом
+            использовании Сайта ознакомиться с текстом Политики. <br>
+            7.4 Новая редакция Политики вступает в силу с момента ее размещения в соответствующем разделе Сайта. Любые
+            изменения в Политике с момента вступления в силу равно распространяются на всех Пользователей, в том числе
+            присоединившихся к Регламенту ранее даты вступления в силу изменений. В случае если Пользователь не согласен
+            с внесенными изменениями и дополнениями он имеет право направить Оператору отзыв Согласия в порядке,
+            предусмотренном в разделе 6 Политики. Отсутствие указанных в настоящем пункте действий Пользователя
+            расценивается как акцепт новой редакции и иных изменений Политики в соответствии с п. 2 ст. 438 Гражданского
+            кодекса Российской Федерации. <br>
+            7.5 Пользователь обязуется самостоятельно следить за изменениями Политики конфиденциальности путем
+            ознакомления с актуальной редакцией. <br>
         </p>
 
 
 
-   </div>
+    </div>
 </div>
