--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -14,7 +14,7 @@
                         <th class="uk-text-center uk-width-auto">ID</th>
                         <th class="uk-text-center uk-width-auto">Название задачи</th>
                         <th class="uk-text-center uk-width-auto">Заказчик</th>
-                        <th class="uk-text-center uk-width-auto">Статус</th>
+                        <th class="uk-text-center uk-width-1-5">Статус</th>
                         <th class="uk-text-center uk-width-auto">Отказаться/Завершить</th>
                         <th class="uk-text-center uk-width-auto">Посмотреть пожелания</th>
                         <!-- <th class="uk-text-center uk-width-auto">Сообщения</th> -->
@@ -27,10 +27,11 @@
                         <td class="uk-text-center product_id" uk-tooltip="{{ product.id }}">{{ product.id }}</td>
                         <td class="uk-text-center uk-text-truncate">{{ product.product_name }}</td>
                         <td class="uk-text-center">{{ product.customer }}</td>
-                        <th class="uk-text-left">
-                            <button name="in_work" class="uk-badge" type="submit" style="border-color: {{product.status1}}; background-color: {{product.status1}}; padding: 10%; margin: 2px;" uk-tooltip="В работе" value="{{product.id}}">1</button>
-                            <button name="done"    class="uk-badge" type="submit" style="border-color: {{product.status2}}; background-color: {{product.status2}}; padding: 10%; margin: 2px;" uk-tooltip="Сделано" value="{{product.id}}">2</button>
-                            <button name="payment" class="uk-badge" type="submit" style="border-color: {{product.status3}}; background-color: {{product.status3}}; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" value="{{product.id}}">3</button>
+                        <th class="uk-text-center uk-flex-row">
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_0"  style="padding-left: 10%; text-align: left;{% if product.status == 0 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы не готовы еще начать работу над заказом">Товар в обработке</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_1"  style="padding-left: 10%; text-align: left;{% if product.status == 1 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы ознакомились с деталями заказа и готовы начать работу над ним">Заказ в процессе сборки</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_2"  style="padding-left: 10%; text-align: left;{% if product.status == 2 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если заказ готов к отправке получателю">Заказ готов</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_3"  style="padding-left: 10%; text-align: left;{% if product.status == 3 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы отправили товар получателю">Заказ в процессе доставки</button>
                         </th>
                         <td class="uk-text-center">
                             {% if product.status1 == "red" %}
@@ -39,7 +40,7 @@
                             <button style="background-color: #faa05a" class="uk-button uk-width-auto uk-text-center uk-border-rounded" disabled>Доставить</button>
                             {% else %}
                             <!-- <button name="send" form="products_in_work_id" type="submit" value="{{product.id}}" style="background-color: #faa05a" class="uk-button uk-width-1 uk-text-center uk-border-rounded">Доставить</button> -->
-                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}" class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded">Отказаться</button>
+                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}" class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded" uk-tooltip="Нажмите, если вы хотите отказаться от этого заказа">Отказаться</button>
                             
                             {% endif %}
                             {{product.st}}
@@ -57,9 +58,11 @@
                                     </div>
 
                                     <div class="uk-modal-body" uk-overflow-auto>
-                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus est dolore nulla porro hic dolor molestiae fugit. Beatae in reprehenderit explicabo consequatur commodi. Ducimus, tempora repudiandae maxime itaque
-                                            soluta eaque. </p>
-
+                                        <h3>Сообщение от покупателя</h3>
+                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> {{product.message}} </p>
+                                        <div class="uk-margin"></div>
+                                        <h3>Адрес доставки</h3>
+                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> {{product.delivery_address}} </p>
                                     </div>
 
                                     <div class="uk-modal-footer uk-text-right">
