--- a/bizopt/BO/templates/becomeCreatorTemplates/template7.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template7.html
@@ -14,39 +14,50 @@
         <p style="margin: 0; font-weight: 600; font-size: 1em;">На этой странице Вы можете выбрать способы доставки</p>
     </div>
 
-    <div class="uk-width-2-3 uk-margin-medium-top">
+    <!-- <div class="uk-width-2-3 uk-margin-medium-top">
         <p style="font-weight: 600; font-size: 2em; margin: 0;" >Адрес возврата товара</p>
         <p style="margin: 0; font-weight: 600; font-size: 1em; margin-bottom: 1%;">На какой адрес отсылать товар, в случае возврата покупателем</p>
         <input class="uk-input uk-border-rounded uk-width-1-2" style="border: solid black 2px; border-radius: 5em;" type="text" placeholder="Адрес">
-    </div>
+    </div> -->
 
     <div class="uk-margin-medium-top">
         <div>
             <p style="font-weight: 600; font-size: 2em; margin: 0">Доступные способы доставки</p>
+            {% if shop.shipping_pony_express == '' and shop.shipping_yandex_delivery == '' and shop.shipping_dostavista == '' and shop.shipping_sdek == '' %}
             <p style="font-weight: 600; font-size: 1em; margin: 0">Здесь будут отображаться выбранные Вами способы доставки товара</p>
-            <div class="uk-flex">
+            {% endif %}
+            <div class="uk-flex-row">
+                {% if shop.shipping_pony_express != '' %}
+                <div class="uk-margin-top uk-margin-right uk-flex-column">
+                    <p style="font-weight: 520; font-size: 1.5em">Пони Экспресс</p>
+                    <p class="uk-text-break" style="font-weight: 520; font-size: 1.2em; margin: 0;">{{shop.shipping_pony_express}}</p>
+                </div>
+                {% endif %}
+
+                {% if shop.shipping_yandex_delivery != '' %}
                 <div class="uk-margin-top uk-margin-right uk-flex-column">
                     <p style="font-weight: 520; font-size: 1.5em">Яндекс Доставка</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
+                    <p class="uk-text-break" style="font-weight: 520; font-size: 1.2em; margin: 0;">{{shop.shipping_yandex_delivery}}</p>
                 </div>
+                {% endif %}
+
+                {% if shop.shipping_dostavista != '' %}
                 <div class="uk-margin-top uk-margin-right uk-flex-column">
-                    <p style="font-weight: 520; font-size: 1.5em">Яндекс Доставка</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
+                    <p style="font-weight: 520; font-size: 1.5em">Достависта</p>
+                    <p class="uk-text-break" style="font-weight: 520; font-size: 1.2em; margin: 0;">{{shop.shipping_dostavista}}</p>
                 </div>
-                <div class="uk-margin-top uk-flex-column">
-                    <p style="font-weight: 520; font-size: 1.5em">Яндекс Доставка</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
-                    <p style="font-weight: 520; font-size: 1.2em; margin: 0;">инфа инфа инфа инфа</p>
+                {% endif %}
+
+                {% if shop.shipping_sdek != '' %}
+                <div class="uk-margin-top uk-margin-right uk-flex-column">
+                    <p style="font-weight: 520; font-size: 1.5em">СДЭК</p>
+                    <p class="uk-text-break" style="font-weight: 520; font-size: 1.2em; margin: 0;">{{shop.shipping_sdek}}</p>
                 </div>
+                {% endif %}
             </div>
         </div>
 
-        <a class="uk-button uk-button-secondary uk-border-pill uk-margin-large-top" href="/deliveryChoice/">Добавить способ доставки</a>
+        <a class="uk-button uk-button-secondary uk-border-pill uk-margin-medium-top" style="font-size: 1.3em;" href="/deliveryChoice/">Редактировать доставку</a>
          
     </div>
 
