--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -5,10 +5,13 @@
 </div>
 <div class="center">
 
-    <form method="POST" id="products_in_work_id" style="background-color: rgba(204, 204, 204, 0.2); margin: 1% 0; padding: 0 10px; width: 100%;" enctype="multipart/form-data">
+    <form method="POST" id="products_in_work_id"
+        style="background-color: rgba(204, 204, 204, 0.2); margin: 1% 0; padding: 0 10px; width: 100%;"
+        enctype="multipart/form-data">
         {% csrf_token %}
         <div class="uk-overflow-auto" style="margin: 0 auto">
-            <table class="uk-table uk-table-justify uk-table-divider uk-table-large" data-spy="scroll" data-target="#spy">
+            <table class="uk-table uk-table-justify uk-table-divider uk-table-large" data-spy="scroll"
+                data-target="#spy">
                 <thead>
                     <tr class="uk-text-center">
                         <th class="uk-text-center uk-width-auto">ID</th>
@@ -23,59 +26,88 @@
                 <!-- товары в работе -->
                 <tbody>
                     {% for product in products %}
+                    {% if product.is_incart == 0 %}
                     <tr>
                         <td class="uk-text-center product_id" uk-tooltip="{{ product.id }}">{{ product.id }}</td>
                         <td class="uk-text-center uk-text-truncate">{{ product.product_name }}</td>
                         <td class="uk-text-center">{{ product.customer }}</td>
                         <th class="uk-text-center uk-flex-row">
-                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_0"  style="padding-left: 10%; text-align: left;{% if product.status == 0 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы не готовы еще начать работу над заказом">Товар в обработке</button>
-                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_1"  style="padding-left: 10%; text-align: left;{% if product.status == 1 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы ознакомились с деталями заказа и готовы начать работу над ним">Заказ в процессе сборки</button>
-                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_2"  style="padding-left: 10%; text-align: left;{% if product.status == 2 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если заказ готов к отправке получателю">Заказ готов</button>
-                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}" name="change_status_to_3"  style="padding-left: 10%; text-align: left;{% if product.status == 3 %} background-color: green; color: white {% endif %}" uk-tooltip="выберите этот пункт, если вы отправили товар получателю">Заказ в процессе доставки</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}"
+                                name="change_status_to_0"
+                                style="padding-left: 10%; text-align: left;{% if product.status == 0 %} background-color: green; color: white {% endif %}"
+                                uk-tooltip="выберите этот пункт, если вы не готовы еще начать работу над заказом">Товар
+                                в обработке</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}"
+                                name="change_status_to_1"
+                                style="padding-left: 10%; text-align: left;{% if product.status == 1 %} background-color: green; color: white {% endif %}"
+                                uk-tooltip="выберите этот пункт, если вы ознакомились с деталями заказа и готовы начать работу над ним">Заказ
+                                в процессе сборки</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}"
+                                name="change_status_to_2"
+                                style="padding-left: 10%; text-align: left;{% if product.status == 2 %} background-color: green; color: white {% endif %}"
+                                uk-tooltip="выберите этот пункт, если заказ готов к отправке получателю">Заказ
+                                готов</button>
+                            <button class="uk-width-1 uk-button uk-button-text" type="submit" value="{{product.id}}"
+                                name="change_status_to_3"
+                                style="padding-left: 10%; text-align: left;{% if product.status == 3 %} background-color: green; color: white {% endif %}"
+                                uk-tooltip="выберите этот пункт, если вы отправили товар получателю">Заказ в процессе
+                                доставки</button>
                         </th>
                         <td class="uk-text-center">
                             {% if product.status1 == "red" %}
-                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}" class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded">Отказаться</button>
+                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}"
+                                class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded">Отказаться</button>
                             {% elif product.status2 == "red" %}
-                            <button style="background-color: #faa05a" class="uk-button uk-width-auto uk-text-center uk-border-rounded" disabled>Доставить</button>
+                            <button style="background-color: #faa05a"
+                                class="uk-button uk-width-auto uk-text-center uk-border-rounded"
+                                disabled>Доставить</button>
                             {% else %}
                             <!-- <button name="send" form="products_in_work_id" type="submit" value="{{product.id}}" style="background-color: #faa05a" class="uk-button uk-width-1 uk-text-center uk-border-rounded">Доставить</button> -->
-                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}" class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded" uk-tooltip="Нажмите, если вы хотите отказаться от этого заказа">Отказаться</button>
-                            
+                            <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}"
+                                class="uk-button uk-button-danger uk-width-auto uk-text-center uk-border-rounded"
+                                uk-tooltip="Нажмите, если вы хотите отказаться от этого заказа">Отказаться</button>
+
                             {% endif %}
                             {{product.st}}
                         </td>
 
                         <td class="uk-text-center">
-                            <button name="" form="products_in_work_id" type="button" class="uk-button uk-button-primary uk-border-rounded" href="#modal-overflow" uk-toggle>Посмотреть</button>
+                            <button name="" form="products_in_work_id" type="button"
+                                class="uk-button uk-button-primary uk-border-rounded" href="#modal-overflow"
+                                uk-toggle>Посмотреть</button>
                             <div id="modal-overflow" uk-modal>
                                 <div class="uk-modal-dialog">
 
                                     <button class="uk-modal-close-default" type="button" uk-close></button>
 
                                     <div class="uk-modal-header">
-                                        <h2 class="uk-modal-title uk-text-truncate">Пожелание к товару {{ product.product_name }}</h2>
+                                        <h2 class="uk-modal-title uk-text-truncate">Пожелание к товару
+                                            {{ product.product_name }}</h2>
                                     </div>
 
                                     <div class="uk-modal-body" uk-overflow-auto>
                                         <h3>Сообщение от покупателя</h3>
-                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> {{product.message}} </p>
+                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> {{product.message}}
+                                        </p>
                                         <div class="uk-margin"></div>
                                         <h3>Адрес доставки</h3>
-                                        <p class="uk-text-small uk-text-center uk-text-emphasis"> {{product.delivery_address}} </p>
+                                        <p class="uk-text-small uk-text-center uk-text-emphasis">
+                                            {{product.delivery_address}} </p>
                                     </div>
 
                                     <div class="uk-modal-footer uk-text-right">
-                                        <button class="uk-button uk-button-primary uk-modal-close" type="button">Закрыть</button>
+                                        <button class="uk-button uk-button-primary uk-modal-close"
+                                            type="button">Закрыть</button>
                                     </div>
 
                                 </div>
                             </div>
                         </td>
                     </tr>
+                    {% endif %}
                     {% endfor %}
                 </tbody>
-            
+
             </table>
         </div>
 
@@ -85,7 +117,7 @@
 </div>
 
 <script>
-    
+
 </script>
 
 
@@ -96,23 +128,23 @@
         height: 350px;
         overflow: auto;
     }
-    
+
     .table-fixed {
         width: 100%;
         background-color: #f3f3f3;
     }
-    
+
     .center {
         width: 100%;
         height: auto;
     }
-    
+
     .img {
         height: 50px;
         width: 50px;
         background-color: aqua;
     }
-    
+
     .button {
         width: 71.5%;
         margin-left: 13.5%;
@@ -120,7 +152,7 @@
     }
 </style>
 
-<script >
+<script>
 
 
 </script>
